--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-social-icons": "^6.16.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -25,10 +28,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "plugin:storybook/recommended"
+    ]
   },
   "browserslist": {
     "production": [
@@ -41,5 +49,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-essentials": "^8.2.2",
+    "@storybook/addon-interactions": "^8.2.2",
+    "@storybook/addon-links": "^8.2.2",
+    "@storybook/addon-onboarding": "^8.2.2",
+    "@storybook/blocks": "^8.2.2",
+    "@storybook/preset-create-react-app": "^8.2.2",
+    "@storybook/react": "^8.2.2",
+    "@storybook/react-webpack5": "^8.2.2",
+    "@storybook/test": "^8.2.2",
+    "@types/react-scroll": "^1.8.10",
+    "eslint-plugin-storybook": "^0.8.0",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.2.2",
+    "webpack": "^5.93.0"
   }
 }
